fixed typo, again

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Creepster&display=swap" rel="stylesheet">
-    <title>(Not so) Abandonned house</title>
+    <title>(Not so) Abandoned house</title>
   </head>
   <body>
     <div id="root"></div>
